[gd_scene load_steps=9 format=3 uid="uid://daickrdgcdmvx"]

[ext_resource type="Theme" uid="uid://bhwmfnyyieplb" path="res://main_theme.tres" id="1_ushtn"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/card_ui.gd" id="2_2n3pb"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/card_state_machine.gd" id="3_pnh3p"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/Card_State/card_base_state.gd" id="4_komcv"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/Card_State/card_clicked_state.gd" id="5_rbn0u"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/Card_State/card_dragging_state.gd" id="6_5ncwx"]
[ext_resource type="Script" path="res://Scenes/Card_Ui/Card_State/card_released_state.gd" id="7_7u2ab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43c50"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ushtn")
script = ExtResource("2_2n3pb")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.139759, 0.30793, 0.187904, 1)

[node name="State" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_43c50")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_pnh3p")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_komcv")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_rbn0u")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_5ncwx")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_7u2ab")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
